# card-clash-multi-nft

./: .gitignore  Dockerfile  LAUNCH_CHECKLIST.md  convert-nft-ranks.py  docker-compose.yml  hotcraft-progress.json  nft.json  nft.wasm  package.json  parse-hotcraft-ranks.js  parse-hotcraft-slow.js  railway.toml  telegram.env  vercel.json  КАК_ИГРАТЬ.md  ОБЗОР_ДЛЯ_КОЛЛЕГИ.md
backend/: .dockerignore  .env.example  .gitignore  Procfile  config.py  docker-compose.yml  fix_db.py  main.py  requirements.txt  reset_ratings.py  test_db.py
backend/api/: auth.py  db_ping.py  endpoints.py  game_state_sync.py  rest_api.py  users.py  websocket.py  websocket_server.py
backend/database/: database_manager.py  db.py  migrations_bootstrap.py  session.py
backend/game/: deck_builder.py
backend/routers/: __init__.py  cases.py  coins.py  decks.py  matches.py  matchmaking.py  mock_nfts.py  near.py  presence.py  proxy.py  stress.py  tournaments.py  user.py  ws_game.py  ws_match.py
backend/tg/: bot.py  bot_core.py  test_bot.py  (+2 more)
contracts/near/escrow/: Cargo.toml  build.bat
contracts/near/escrow/res/: cardclash_escrow.wasm
contracts/near/escrow/src/: lib.rs
frontend/: .env.example  crypto-browserify.js  index.html  package-lock.json  package.json  vercel.json  vite.config.js
scripts/: deploy-mainnet.bat  deploy-testnet.bat
tools/: compute_cid.mjs  download_bunny.mjs  dump_nft_links.mjs  loadtest.mjs  nft_media_urls.txt  nft_media_urls_sorted.txt  nft_meta_urls.txt  nft_meta_urls_sorted.txt  package-lock.json  package.json  pin_to_pinata.mjs  verify_cid.mjs  wsbattle.mjs
(+72 files in other folders)
