[package]
name = "cardclash-escrow"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "5.5.0"
near-contract-standards = "5.5.0"

# IMPORTANT: borsh must be present for derive macros to work
borsh = "1.5.0"

serde = { version = "1", features = ["derive"] }
serde_json = "1"